refactor Light interface

--- a/jmri/NamedBeanBundle.properties
+++ b/jmri/NamedBeanBundle.properties
@@ -1,6 +1,6 @@
 # NamedBeanBundle.properties
 #
-# Revision $Revision: 1.4 $
+# Revision $Revision: 1.5 $
 #
 # Default properties decribing states of the various types of NamedBeans
 
@@ -18,6 +18,12 @@ BeanNameRoute       = Route
 
 LightStateOff = Off
 LightStateOn = On
+LightStateIntermediate = Intermediate
+LightStateTransitioning = Transitioning
+LightStateTransitioningToFullOn = Transitioning To Full On
+LightStateTransitioningHigher = Transitioning Higher
+LightStateTransitioningLower = Transitioning Lower
+LightStateTransitioningToFullOff = Transitioning To Full Off
 
 TurnoutStateClosed = Closed
 TurnoutStateThrown = Thrown
