--- a/jmri/jmrit/simplelightctrl/SimpleLightCtrlBundle.properties
+++ b/jmri/jmrit/simplelightctrl/SimpleLightCtrlBundle.properties
@@ -1,6 +1,6 @@
 # SimpleLightCtrlBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 #
 # Default properties for the jmri.jmrit.simplelightctrl GUI elements
 
@@ -27,17 +27,17 @@ LightOnButton = On
 LightOnButtonToolTip = Press to turn light on/bright
 LightOffButton = Off
 LightOffButtonToolTip = Press to turn light off/dim
-LightEnableDimLabel = Enable Dimming:
-LightDimEnabledToolTip = If checked, only dim/bright commands used, if supported by device.\nIf not checked, on/off commands will be used.
-LightDimTextLabel = Dim:
-LightDimTextToolTip = 0 to 100 for percent of output
-LightMinDimLabel = Min Dim: 
-LightMinDimToolTip = Min for a dim setting, 0% to 100%
-LightMaxDimLabel = Max Dim: 
-LightMaxDimToolTip = Max for a dim setting, 0% to 100%
-LightRateDimLabel = Change Rate: 
-LightRateDimToolTip = Speed of dimming, fast minutes for 0% to 100%
-LightDimButton = Dim
-LightDimButtonToolTip = Press to set dim level
+
+LightIntensityTextLabel = Intensity:
+LightIntensityTextToolTip = 0 to 100 for percent of output
+
+LightMinIntensityLabel = Min Intensity: 
+LightMinIntensityToolTip = Intensity for off, 0% to 100%
+LightMaxIntensityLabel = Max Intensity: 
+LightMaxIntensityToolTip = Intensity for on, 0% to 100%
+LightTransitionTimeLabel = Transition Time: 
+LightTransitionTimeToolTip = Speed of dimming, fast minutes for 0% to 100%
+LightSetButton = Set
+LightSetButtonToolTip = Press to set intensity
 LightApplyButton = Apply
 LightApplyButtonToolTip = Press to apply settings
