New panels now get unique panel names when created.  User's can not rename a panel with a name that already exists.  Warning message appears if they try.

--- a/jmri/jmrit/display/DisplayBundle.properties
+++ b/jmri/jmrit/display/DisplayBundle.properties
@@ -1,6 +1,6 @@
 # DisplayBundle.properties
 #
-# Revision $Revision: 1.18 $
+# Revision $Revision: 1.19 $
 #
 # Default properties for the jmrit.display package
 
@@ -78,3 +78,7 @@ ButtonYesDelete = Yes - Delete
 ButtonNoCancel = No - Cancel
 QuestionA = Are you sure you want to delete this panel, and all displayed icons and track objects?
 QuestionB = (If this panel was loaded, to permanently delete it, select Store Panels... in the Panel menu.)
+
+# rename panel error messages
+CanNotRename = Can not rename panel with the same name as an existing panel
+PanelExist = Panel name already exists!
