--- a/jmri/jmrit/display/LayoutEditorBundle.properties
+++ b/jmri/jmrit/display/LayoutEditorBundle.properties
@@ -1,6 +1,6 @@
 # LayoutEditorBundle.properties
 #
-# Revision $Revision: 1.10 $
+# Revision $Revision: 1.11 $
 #
 # Text properties for jmrit.display.LayoutEditor and associated modules
 
@@ -363,3 +363,7 @@ Question1 = Are you sure you want to remove this turnout from the panel, along w
 Question2 = Are you sure you want to remove this point from the panel, along with any connected Track Segments?
 Question3 = Are you sure you want to remove this level crossing from the panel, along with any connected Track Segments?
 Question4 = Are you sure you want to remove this turntable from the panel, along with any connected Track Segments?
+
+# rename panel error messages
+CanNotRename = Can not rename panel with the same name as an existing panel
+PanelExist = Panel name already exists!
