Add info message when closing a panel

--- a/jmri/jmrit/display/DisplayBundle.properties
+++ b/jmri/jmrit/display/DisplayBundle.properties
@@ -1,6 +1,6 @@
 # DisplayBundle.properties
 #
-# Revision $Revision: 1.19 $
+# Revision $Revision: 1.20 $
 #
 # Default properties for the jmrit.display package
 
@@ -82,3 +82,7 @@ QuestionB = (If this panel was loaded, to permanently delete it, select Store Pa
 # rename panel error messages
 CanNotRename = Can not rename panel with the same name as an existing panel
 PanelExist = Panel name already exists!
+
+# close panel warning messages
+PanelHidden = is now hidden, use Panels->Show Panel in the main menu to make visable.
+PanelHiddenHelp = Use " {0} " Edit->Delete this panel... to destroy.
