switch to using shell script for startup

--- a/scripts/MacOSXapps/V1/DecoderPro.app/Contents/Info.plist
+++ b/scripts/MacOSXapps/V1/DecoderPro.app/Contents/Info.plist
@@ -19,7 +19,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleExecutable</key>
-	<string>JavaApplicationStub</string>
+	<string>StartJMRI</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleVersion</key>
