use HTML for explanations

--- a/jmri/jmrix/loconet/sdfeditor/Explanations.properties
+++ b/jmri/jmrix/loconet/sdfeditor/Explanations.properties
@@ -13,10 +13,10 @@ END_SOUND = End of the definition of a sound sequence
 
 GENERATE_TRIGGER = Create a trigger event.
 
-INITIATE_SOUND = Start the definition of a specific sound within a channel. \
+INITIATE_SOUND = <html><BODY>Start the definition of a specific sound within a channel. \
                 The first argument defines a trigger condition, which must \
-                be true for the sound to be initiated.  The second defines \
-                a preemption condition.
+                be true for the sound to be initiated.  <p>The second defines \
+                a preemption condition.</BODY></html>
                 
 LOAD_MODIFIER = Configure modifiers that control aspects of sound generation
 
