--- a/apps/ActionListBundle.properties
+++ b/apps/ActionListBundle.properties
@@ -1,6 +1,6 @@
 # ActionListBundle.properties
 #
-# Revision $Revision: 1.14 $
+# Revision $Revision: 1.15 $
 #
 # Properties listing names for "Action" classes that can appear
 # in various forms in advanced preferences
@@ -49,6 +49,7 @@ jmri.jmrit.jython.InputWindowAction =               Open Script Entry Window
 
 # selected items from systems menus
 jmri.jmrix.cmri.serial.serialmon.SerialMonAction =  Open C/MRI Monitor
+jmri.jmrix.acela.acelamon.AcelaMonAction =    Open Acela Monitor
 jmri.jmrix.easydcc.easydccmon.EasyDccMonAction =    Open EasyDCC Monitor
 jmri.jmrix.grapevine.serialmon.SerialMonAction =    Open Grapevine Monitor
 jmri.jmrix.grapevine.packetgen.SerialPacketGenAction = Open Grapevine Send Packet
