from Robert Coleman

--- a/jmri/jmrix/JmrixSystemsBundle.properties
+++ b/jmri/jmrix/JmrixSystemsBundle.properties
@@ -1,6 +1,6 @@
 # JmritSystemsBundle.properties
 #
-# Revision $Revision: 1.16 $
+# Revision $Revision: 1.17 $
 #
 # Default properties for the jmri.jmrix Systems menu
 
@@ -11,6 +11,7 @@ MenuTools    = Systems
 
 MenuSystems = Systems
 
+MenuItemAcela = Acela
 MenuItemCMRI = CMRI
 MenuItemEasyDCC = EasyDCC
 MenuItemLocoNet = LocoNet
