Add "don't show again" button to panel close info message

--- a/jmri/jmrit/display/DisplayBundle.properties
+++ b/jmri/jmrit/display/DisplayBundle.properties
@@ -1,6 +1,6 @@
 # DisplayBundle.properties
 #
-# Revision $Revision: 1.20 $
+# Revision $Revision: 1.21 $
 #
 # Default properties for the jmrit.display package
 
@@ -83,6 +83,8 @@ QuestionB = (If this panel was loaded, to permanently delete it, select Store Pa
 CanNotRename = Can not rename panel with the same name as an existing panel
 PanelExist = Panel name already exists!
 
-# close panel warning messages
+# close panel warning messages and buttons
 PanelHidden = is now hidden, use Panels->Show Panel in the main menu to make visable.
 PanelHiddenHelp = Use " {0} " Edit->Delete this panel... to destroy.
+ButtonOkay = OK
+ButtonDontShow = Don't show this again
