--- a/jmri/jmrit/beantable/BeanTableBundle.properties
+++ b/jmri/jmrit/beantable/BeanTableBundle.properties
@@ -1,6 +1,6 @@
 # BeanTableBundle.properties
 #
-# Revision $Revision: 1.28 $
+# Revision $Revision: 1.29 $
 #
 # Default properties for the jmri.jmrit.beantable GUI elements
 
@@ -47,8 +47,8 @@ TitleAddBlock   = Add/Edit Block
 ColumnHeadEnabled = Enabled
 ColumnHeadIntensity = Intensity
 
-StringTripleTurnout = Triple Turnout
-StringDoubleTurnout = Double Turnout
+StringTripleTurnout = Triple Output
+StringDoubleTurnout = Double Output
 StringVirtual = Virtual
 StringSE8c4aspect  = SE8c 4 Aspect
 StringLsDec = LDT LS-DEC
@@ -58,14 +58,13 @@ StringDccSigDec = DCC Signal Decoder
 LabelSystemName = System Name:
 LabelUserName   = User Name:
 LabelTurnoutNumber = Turnout number:
-LabelGreenTurnoutNumber  = Green turnout number:
-LabelYellowTurnoutNumber = Yellow turnout number:
-LabelRedTurnoutNumber    = Red turnout number:
-LabelFlashGreenTurnoutNumber  = Flash Green turnout number:
-LabelFlashYellowTurnoutNumber = Flash Yellow turnout number:
-LabelFlashRedTurnoutNumber    = Flash Red turnout number:
-LabelDarkTurnoutNumber    = Dark turnout number:
-LabelSignalTurnoutNumber = Signal Turnout Number
+LabelGreenTurnoutNumber  = Green output number:
+LabelYellowTurnoutNumber = Yellow output number:
+LabelRedTurnoutNumber    = Red output number:
+LabelFlashGreenTurnoutNumber  = Flash Green output number:
+LabelFlashYellowTurnoutNumber = Flash Yellow output number:
+LabelFlashRedTurnoutNumber    = Flash Red output number:
+LabelDarkTurnoutNumber    = Dark output number:
 
 LightSystemName = Light System Name
 LightSystemNameHint = Enter system name for new Light, e.g. CL1B13
