add term for common tool

--- a/jmri/jmrix/JmrixSystemsBundle.properties
+++ b/jmri/jmrix/JmrixSystemsBundle.properties
@@ -1,6 +1,6 @@
 # JmritSystemsBundle.properties
 #
-# Revision $Revision: 1.17 $
+# Revision $Revision: 1.18 $
 #
 # Default properties for the jmri.jmrix Systems menu
 
@@ -35,4 +35,4 @@ MenuItemMacroEdit = Edit Macro
 MenuItemConsistEdit = Edit Consist
 MenuItemTrackPacketMonitor = DCC Packet Analyzer
 MenuItemClockMon = Monitor Clock
-
+MenuItemConfigNodes = Configure Nodes
