--- a/apps/ActionListBundle.properties
+++ b/apps/ActionListBundle.properties
@@ -1,6 +1,6 @@
 # ActionListBundle.properties
 #
-# Revision $Revision: 1.15 $
+# Revision $Revision: 1.16 $
 #
 # Properties listing names for "Action" classes that can appear
 # in various forms in advanced preferences
@@ -52,6 +52,7 @@ jmri.jmrix.cmri.serial.serialmon.SerialMonAction =  Open C/MRI Monitor
 jmri.jmrix.acela.acelamon.AcelaMonAction =    Open Acela Monitor
 jmri.jmrix.easydcc.easydccmon.EasyDccMonAction =    Open EasyDCC Monitor
 jmri.jmrix.grapevine.serialmon.SerialMonAction =    Open Grapevine Monitor
+jmri.jmrix.grapevine.nodetable.NodeTableAction =    Open Grapevine Node Table
 jmri.jmrix.grapevine.packetgen.SerialPacketGenAction = Open Grapevine Send Packet
 jmri.jmrix.lenz.mon.XNetMonAction =                 Open XPressNet Monitor
 jmri.jmrix.loconet.locomon.LocoMonAction =          Open LocoNet Monitor
