--- a/jmri/jmrix/grapevine/GrapevineBundle.properties
+++ b/jmri/jmrix/grapevine/GrapevineBundle.properties
@@ -1,6 +1,6 @@
 # GrapevineBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 #
 # Default properties for the jmri.jmrix.grapevine menu
 
@@ -9,3 +9,4 @@ MenuSystem    = Grapevine
 MenuItemCommandMonitor      = Communications Monitor
 MenuItemSendCommand         = Send Command
 MenuItemConfigNodes         = Configure Nodes
+MenuItemNodeTable           = Node Table
