move the "edit" option for specific turnout operations from a choice in the dropdown list to a seperate button column.  Also, make sure when edit is selected for a specific turnout that only the instance of the operation used for that turnout is edited.

--- a/jmri/jmrit/beantable/BeanTableBundle.properties
+++ b/jmri/jmrit/beantable/BeanTableBundle.properties
@@ -1,6 +1,6 @@
 # BeanTableBundle.properties
 #
-# Revision $Revision: 1.29 $
+# Revision $Revision: 1.30 $
 #
 # Default properties for the jmri.jmrit.beantable GUI elements
 
@@ -143,6 +143,8 @@ WarningTitle = Warning
 TurnoutWarn1 = Warning - Requested Turnout
 TurnoutWarn2 = uses same address as Light
 TurnoutWarn3 = Do you still want to add this Turnout?
+
+EditTurnoutOperation = Edit
 
 // light features for variable intensity, transitions
 LightIntensitySettingBorder =  Variable Light Settings 
