add USB via JInput

--- a/apps/ActionListBundle.properties
+++ b/apps/ActionListBundle.properties
@@ -1,6 +1,6 @@
 # ActionListBundle.properties
 #
-# Revision $Revision: 1.16 $
+# Revision $Revision: 1.17 $
 #
 # Properties listing names for "Action" classes that can appear
 # in various forms in advanced preferences
@@ -61,6 +61,7 @@ jmri.jmrix.nce.ncemon.NceMonAction =                Open NCE Monitor
 jmri.jmrix.powerline.serialmon.SerialMonAction =    Open Powerline Monitor
 jmri.jmrix.powerline.packetgen.SerialPacketGenAction = Open Powerline Send Packet
 jmri.jmrix.zimo.zimomon.Mx1MonAction =              Open Zimo Monitor
+jmri.jmrix.jinput.treecontrol.TreeAction =          Open USB Control
 
 # RPS items
 jmri.jmrix.rps.rpsmon.RpsMonAction      =           Open RPS Monitor
