--- a/jmri/jmrix/grapevine/nodetable/NodeTableBundle.properties
+++ b/jmri/jmrix/grapevine/nodetable/NodeTableBundle.properties
@@ -1,11 +1,11 @@
 # NodeTableBundle.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 #
 # Default properties for the jmri.jmrix.grapevine.nodetable package
 
 WindowTitle    = Grapevine Nodes
-WindowTitleRenumber = Renumber Grapevine Node
+WindowTitleRenumber = Change Grapevine Board Address
 
 ButtonCheck     = Check
 TipCheck        = Click to update Grapevine status
@@ -26,7 +26,7 @@ TitleConfigure  =
 ButtonEdit      = Edit
 ButtonAdd       = Add
 
-ButtonRenumber  = Renumber
+ButtonRenumber  = Change Node Board Address
 
 LabelFrom       = Current Address: 
 LabelTo         = New Address: 
