Add actions to Logix Conditionals for JMRI fast clock - Start, Stop, and Set Time

--- a/jmri/jmrit/beantable/LogixTableBundle.properties
+++ b/jmri/jmrit/beantable/LogixTableBundle.properties
@@ -1,6 +1,6 @@
 # LogixTableBundle.properties
 #
-# Revision $Revision: 1.12 $
+# Revision $Revision: 1.13 $
 #
 # Default properties for the jmri.jmrit.LogixTableAction GUI elements
 
@@ -91,6 +91,7 @@ DataHintSound = Enter name of sound file to be played
 DataHintScript = Enter name of script to be run
 SetHintSound = Click for a file selection dialog for choosing a sound file
 SetHintScript = Click for a file selection dialog for choosing a script file
+DataHintTime = Enter time (hh:mm) for a 24-hour clock
 
 ButtonDelete = Delete
 ButtonFirst = First
@@ -152,6 +153,9 @@ ActionDisableLogix = Disable Logix
 ActionPlaySound = Play Sound File
 ActionRunScript = Run Script
 ActionTurnoutLock = Turnout Lock
+ActionSetFastClockTime = Set Fast Clock Time
+ActionStartFastClock = Start Fast Clock
+ActionStopFastClock = Stop Fast Clock
 ActionTypeHint = Select type of action, or select None if no action is needed.
 
 TurnoutClosed = Closed
