handle longer erase

--- a/jmri/jmrix/loconet/soundloader/Loader.properties
+++ b/jmri/jmrix/loconet/soundloader/Loader.properties
@@ -1,6 +1,6 @@
 # Loader.properties
 #
-# Revision $Revision: 1.3 $
+# Revision $Revision: 1.4 $
 # Copyright 2005, 2006 Bob Jacobsen
 #
 #
@@ -42,9 +42,12 @@ ErrorIOError = IO Error, see log window
 
 # Group of status and error messages for the LoaderEngine
 EngineEraseFlash = Starting download; erase flash
-EngineDone = Done
+EngineEraseWait = Waiting for flash memory to erase (this will take up to 30 seconds)
+EngineSendInit = Sending initialization message
 EngineSendSdf = Send SDF data
 EngineSendWav = Send WAV data
 EngineSendWavBlock = Send WAV data block {0}
+
+EngineDone = Done
 
 EngineAbortDelay = Download aborted; PR2 not ready
