--- a/java/build.xml
+++ b/java/build.xml
@@ -1,6 +1,6 @@
 <!-- Ant build.xml file for JMRI development -->
 <!-- Bob Jacobsen, Copyright 2002, 2003, 2004 -->
-<!-- Revision $Revision: 1.25 $ -->
+<!-- Revision $Revision: 1.26 $ -->
 
 <!-- This file is part of JMRI.                                             -->
 <!--                                                                        -->
@@ -60,6 +60,7 @@
     <pathelement location="../lib/jython.jar" />
     <pathelement location="../lib/javacsv.jar" />
     <pathelement location="../lib/MRJAdapter.jar" />
+    <pathelement location="/System/Library/Java" /> <!-- MacOS X -->
     <pathelement location="../lib/vecmath.jar" />
     <pathelement location="../lib/jinput.jar" />
     <pathelement location="../lib/ch.ntb.usb.jar" />
