New feature for panel, moveable loco icon

--- a/jmri/jmrit/display/DisplayBundle.properties
+++ b/jmri/jmrit/display/DisplayBundle.properties
@@ -1,6 +1,6 @@
 # DisplayBundle.properties
 #
-# Revision $Revision: 1.21 $
+# Revision $Revision: 1.22 $
 #
 # Default properties for the jmrit.display package
 
@@ -10,6 +10,7 @@ Title         = Panel Editor
 MenuPanels    = Panels
 MenuEdit      = Edit
 MenuFile      = File
+MenuMarker    = Marker		
 
 MenuItemNew   = New panel...
 MenuItemLoad  = Load panels...
@@ -17,6 +18,8 @@ MenuItemStore = Store panels...
 MenuShowPanel = Show Panel
 OpenEditor = Open editor
 DeletePanel = Delete this panel...
+AddLoco     = Add loco
+AddLocoRoster     = Add loco from roster
 
 MenuItemScript = Run script...
 
