Loco icon now saved with panels.  Added menu item that removes all loco icons.

--- a/jmri/jmrit/display/DisplayBundle.properties
+++ b/jmri/jmrit/display/DisplayBundle.properties
@@ -1,6 +1,6 @@
 # DisplayBundle.properties
 #
-# Revision $Revision: 1.22 $
+# Revision $Revision: 1.23 $
 #
 # Default properties for the jmrit.display package
 
@@ -20,6 +20,7 @@ OpenEditor = Open editor
 DeletePanel = Delete this panel...
 AddLoco     = Add loco
 AddLocoRoster     = Add loco from roster
+RemoveMarkers	= Remove markers
 
 MenuItemScript = Run script...
 
