Adding block tracking capability to Layout Editor panels

--- a/jmri/jmrit/display/LayoutEditorBundle.properties
+++ b/jmri/jmrit/display/LayoutEditorBundle.properties
@@ -1,6 +1,6 @@
 # LayoutEditorBundle.properties
 #
-# Revision $Revision: 1.11 $
+# Revision $Revision: 1.12 $
 #
 # Text properties for jmrit.display.LayoutEditor and associated modules
 
@@ -135,6 +135,8 @@ OccupiedSense = Occupied Sense
 SensorActive = Active
 SensorInactive = Inactive
 OccupiedSenseHint = Select the occupancy sensor state when the block is occupied.
+MemoryVariable = Memory Variable Name
+MemoryVariableTip = Enter name (system or user) of Memory Variable (optional).
 TrackColor = Track Color:
 TrackColorHint = Select the track color when this block is unoccupied.
 OccupiedColor = Occupied Track Color:
@@ -353,6 +355,7 @@ Error12 = Error - Cannot translate selection because no selection has been made.
 Error13 = Error - Cannot delete a ray track because none are within 30 degrees of the\nentered angle. Please try again with a more precise angle entry.
 Error14 = Error - Required throat-to-throat arrangement not found. Please set up as two turnouts connected throat-to-throat by a single track segment.
 Error15 = Error - Cannot proceed because there is no turnout is assigned to one or more of the turnout diagrams. Please assign turnout(s) and try again.
+Error16 = Error - Cannot attach Memory to Block because no memory is defined for "{0}. Please enter a Memory defined in the Memory Table and try again.
 
 # question messages
 ButtonNo = No
