--- a/jmri/jmrit/simplelightctrl/SimpleLightCtrlBundle.properties
+++ b/jmri/jmrit/simplelightctrl/SimpleLightCtrlBundle.properties
@@ -1,6 +1,6 @@
 # SimpleLightCtrlBundle.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 #
 # Default properties for the jmri.jmrit.simplelightctrl GUI elements
 
@@ -37,7 +37,7 @@ LightMaxIntensityLabel = Max Intensity:
 LightMaxIntensityToolTip = Intensity for on, 0% to 100%
 LightTransitionTimeLabel = Transition Time: 
 LightTransitionTimeToolTip = Speed of dimming, fast minutes for 0% to 100%
-LightSetButton = Set
+LightSetButton = Dim/Bright
 LightSetButtonToolTip = Press to set intensity
 LightApplyButton = Apply
 LightApplyButtonToolTip = Press to apply settings
