Layout Editor update - additions and corrections for implementing Block Connectivity

--- a/jmri/jmrit/display/LayoutEditorBundle.properties
+++ b/jmri/jmrit/display/LayoutEditorBundle.properties
@@ -1,6 +1,6 @@
 # LayoutEditorBundle.properties
 #
-# Revision $Revision: 1.12 $
+# Revision $Revision: 1.13 $
 #
 # Text properties for jmrit.display.LayoutEditor and associated modules
 
@@ -341,7 +341,7 @@ Error = Error
 EntryError = Error in entry
 TryAgain = Please reenter or cancel.
 Error1 = Error - Cannot create or edit a block without a name.\nPlease enter a block name and try again.
-Error2 = Error - Entered value '"{0}"' is not in the allowed range.\nPlease enter a number from 1 to 10.
+Error2 = Error - Entered value "{0}" is not in the allowed range.\nPlease enter a number from 1 to 10.
 Error3 = Error in rotation entry:
 Error4 = Error - Physical turnout "{0}" is already linked to a different Panel Turnout.\nPlease enter another turnout name and try again.
 Error5 = Error - You are currently editing this "{0}".\nOnly one editor may be open a the same time.\nPlease cancel or complete that edit and try again.
@@ -361,11 +361,14 @@ Error16 = Error - Cannot attach Memory to Block because no memory is defined for
 ButtonNo = No
 ButtonYes = Yes
 ButtonYesPlus = Yes - Stop Warnings
+ButtonOK = OK
+ButtonOKPlus = OK - Stop Warnings
 WarningTitle = Warning
 Question1 = Are you sure you want to remove this turnout from the panel, along with any connected Track Segments?
 Question2 = Are you sure you want to remove this point from the panel, along with any connected Track Segments?
 Question3 = Are you sure you want to remove this level crossing from the panel, along with any connected Track Segments?
 Question4 = Are you sure you want to remove this turntable from the panel, along with any connected Track Segments?
+Warn1 = Warning - Connectivities for block "{0}" in panels "{1}" and "{2}" are not compatible.
 
 # rename panel error messages
 CanNotRename = Can not rename panel with the same name as an existing panel
