Current work in progress. Trying to figured conflict over transition handling. Also tried to hid the variable light stuff when the light doesn't support dimming.

--- a/jmri/jmrit/simplelightctrl/SimpleLightCtrlBundle.properties
+++ b/jmri/jmrit/simplelightctrl/SimpleLightCtrlBundle.properties
@@ -1,6 +1,6 @@
 # SimpleLightCtrlBundle.properties
 #
-# Revision $Revision: 1.3 $
+# Revision $Revision: 1.4 $
 #
 # Default properties for the jmri.jmrit.simplelightctrl GUI elements
 
@@ -23,6 +23,9 @@ LightGetStatusButton = Get Status
 LightGetStatusToolTip = Press to get current status
 LightStatusLabel = current state:
 LightStatusTextDefault = <unknown>
+LightIsEnabledLabel = Enabled:
+LightIsVariableLabel = Variable:
+LightIsTransitionLabel = Transitional:
 LightOnButton = On
 LightOnButtonToolTip = Press to turn light on/bright
 LightOffButton = Off
