I added a test for multiple connection or port conflicts. We've seen it happen enough, and I think this code will work fine until we come up with a way to make use of the multiples. But we'd still keep the test for port conflicts.

--- a/apps/AppsConfigBundle.properties
+++ b/apps/AppsConfigBundle.properties
@@ -1,6 +1,6 @@
 # AppsConfigBundle.properties
 #
-# Revision $Revision: 1.7 $
+# Revision $Revision: 1.8 $
 #
 # Default properties for configuration in the apps package of JMRI, including
 # the AppConfigPanel and PerformActionPanel classes
@@ -41,3 +41,9 @@ ButtonFileRemove = Remove
 
 ButtonScriptAdd = Add Script
 ButtonScriptRemove = Remove
+
+# port and connection parts
+
+NoneConnectionOrPort = (none)
+MessageLongDupsWarning  = You have duplicates in ports or connections, you know it won't work. Do you want to save anyway?
+MessageShortDupsWarning = Duplicates, save anyway?
