Keep preferences window open if there are duplicates and user doesn't save

--- a/apps/AppsConfigBundle.properties
+++ b/apps/AppsConfigBundle.properties
@@ -1,6 +1,6 @@
 # AppsConfigBundle.properties
 #
-# Revision $Revision: 1.8 $
+# Revision $Revision: 1.9 $
 #
 # Default properties for configuration in the apps package of JMRI, including
 # the AppConfigPanel and PerformActionPanel classes
@@ -45,5 +45,5 @@ ButtonScriptRemove = Remove
 # port and connection parts
 
 NoneConnectionOrPort = (none)
-MessageLongDupsWarning  = You have duplicates in ports or connections, you know it won't work. Do you want to save anyway?
+MessageLongDupsWarning  = You have duplicates in ports or connections which can cause problems. Do you want to save anyway?
 MessageShortDupsWarning = Duplicates, save anyway?
