--- a/jmri/jmrit/JmritToolsBundle.properties
+++ b/jmri/jmrit/JmritToolsBundle.properties
@@ -1,6 +1,6 @@
 # JmritToolsBundle.properties
 #
-# Revision $Revision: 1.20 $
+# Revision $Revision: 1.21 $
 #
 # Default properties for the jmri.jmrit Tools menu
 
@@ -26,9 +26,9 @@ MenuItemSensorGroup = Sensor Groups...
 
 MenuThrottles = Throttles
 MenuItemNewThrottle = New Throttle...
-MenuItemSaveThrottleLayout = Save Throttle Layout
-MenuItemLoadThrottleLayout = Load Throttle Layout
-MenuItemEditThrottlePreferences = Edit Throttle Preferences
+MenuItemSaveThrottleLayout = Save Throttle Layout ...
+MenuItemLoadThrottleLayout = Load Throttle Layout ...
+MenuItemEditThrottlePreferences = Edit Throttle Preferences ...
 
 MenuItemPowerControl = Power Control ...
 MenuItemSpeedometer = Speedometer ...
