Add a Copy Memory To Memory action to Logix

--- a/jmri/jmrit/beantable/LogixTableBundle.properties
+++ b/jmri/jmrit/beantable/LogixTableBundle.properties
@@ -1,6 +1,6 @@
 # LogixTableBundle.properties
 #
-# Revision $Revision: 1.13 $
+# Revision $Revision: 1.14 $
 #
 # Default properties for the jmri.jmrit.LogixTableAction GUI elements
 
@@ -92,6 +92,8 @@ DataHintScript = Enter name of script to be run
 SetHintSound = Click for a file selection dialog for choosing a sound file
 SetHintScript = Click for a file selection dialog for choosing a script file
 DataHintTime = Enter time (hh:mm) for a 24-hour clock
+NameHintFromMemory = Enter name (system or user) of Memory to be copied from
+DataHintToMemory = Enter name (system or user) of Memory to receive the copied value
 
 ButtonDelete = Delete
 ButtonFirst = First
@@ -147,7 +149,8 @@ ActionDelayedTurnout = Delayed Set Turnout
 ActionResetDelayedTurnout = Reset Delayed Set Turnout
 ActionCancelTurnoutTimers = Cancel Timers for Turnout
 ActionSetLight = Set Light
-ActionSetMemory = Set Memory 
+ActionSetMemory = Set Memory
+ActionCopyMemory = Copy Memory To Memory 
 ActionEnableLogix = Enable Logix
 ActionDisableLogix = Disable Logix
 ActionPlaySound = Play Sound File
