Added "console" property

--- a/jmri/jmrix/JmrixSystemsBundle.properties
+++ b/jmri/jmrix/JmrixSystemsBundle.properties
@@ -1,6 +1,6 @@
 # JmritSystemsBundle.properties
 #
-# Revision $Revision: 1.18 $
+# Revision $Revision: 1.19 $
 #
 # Default properties for the jmri.jmrix Systems menu
 
@@ -36,3 +36,5 @@ MenuItemConsistEdit = Edit Consist
 MenuItemTrackPacketMonitor = DCC Packet Analyzer
 MenuItemClockMon = Monitor Clock
 MenuItemConfigNodes = Configure Nodes
+MenuItemConsole = Console
+
