use shutdown manager to prevent quit while unsaved window open

--- a/jmri/jmrit/symbolicprog/SymbolicProgBundle.properties
+++ b/jmri/jmrit/symbolicprog/SymbolicProgBundle.properties
@@ -1,7 +1,7 @@
 #
 # jmri.jmrit.symbolicprog.SymbolicProgBundle.properties
 #
-# Revision $Revision: 1.5 $
+# Revision $Revision: 1.6 $
 #
 # Copyright 2007 Bob Jacobsen, part of JMRI, 
 # see the COPYING file for license info
@@ -109,6 +109,9 @@ FrameServiceProgrammerTitle = Program {0} in Service Mode (Programming Track)
 
 PromptCloseWindowNotWrittenDecoder = Some changes have not been written to the decoder. They will be lost. Close window?
 PromptCloseWindowNotWrittenConfig = Some changes have not been written to a configuration file. Close window?
+PromptQuitWindowNotWrittenDecoder = Some changes have not been written to the decoder. They will be lost. Quit?
+PromptQuitWindowNotWrittenConfig = Some changes have not been written to a configuration file. Quit?
+PromptSaveQuit = Save and Continue Quitting
 PromptChooseOne = Choose one
 PromptSaveAndClose = Save and Close
 PromptClose = Close
