add init button to config node table

--- a/jmri/jmrix/grapevine/nodetable/NodeTableBundle.properties
+++ b/jmri/jmrix/grapevine/nodetable/NodeTableBundle.properties
@@ -1,6 +1,6 @@
 # NodeTableBundle.properties
 #
-# Revision $Revision: 1.3 $
+# Revision $Revision: 1.4 $
 #
 # Default properties for the jmri.jmrix.grapevine.nodetable package
 
@@ -25,6 +25,7 @@ TitleConfigure  =
 
 ButtonEdit      = Edit
 ButtonAdd       = Add
+ButtonInit      = Init
 
 ButtonRenumber  = Change Node Board Address
 
