add block table to list

--- a/apps/ActionListBundle.properties
+++ b/apps/ActionListBundle.properties
@@ -1,6 +1,6 @@
 # ActionListBundle.properties
 #
-# Revision $Revision: 1.18 $
+# Revision $Revision: 1.19 $
 #
 # Properties listing names for "Action" classes that can appear
 # in various forms in advanced preferences
@@ -29,6 +29,7 @@ jmri.jmrit.beantable.ReporterTableAction =          Open Reporter Table
 jmri.jmrit.beantable.MemoryTableAction =            Open Memory Table
 jmri.jmrit.beantable.RouteTableAction =             Open Route Table
 jmri.jmrit.beantable.LightTableAction =				Open Light Table
+jmri.jmrit.beantable.BlockTableAction =				Open Block Table
 jmri.jmrit.beantable.LogixTableAction =				Open Logix Table
 jmri.jmrit.blockboss.BlockBossAction =              Open Signal Logic Panel
 
