--- a/apps/ActionListBundle.properties
+++ b/apps/ActionListBundle.properties
@@ -1,6 +1,6 @@
 # ActionListBundle.properties
 #
-# Revision $Revision: 1.19 $
+# Revision $Revision: 1.20 $
 #
 # Properties listing names for "Action" classes that can appear
 # in various forms in advanced preferences
@@ -62,6 +62,9 @@ jmri.jmrix.nce.ncemon.NceMonAction =                Open NCE Monitor
 jmri.jmrix.powerline.serialmon.SerialMonAction =    Open Powerline Monitor
 jmri.jmrix.powerline.packetgen.SerialPacketGenAction = Open Powerline Send Packet
 jmri.jmrix.zimo.zimomon.Mx1MonAction =              Open Zimo Monitor
+
+jmri.jmrix.qsi.qsimon.QsiMonAction =                Open QSI Monitor
+jmri.jmrix.qsi.packetgen.PacketGenAction =          Open QSI Send Packet
 
 jmri.jmrix.jinput.treecontrol.TreeAction =          Open USB Input Control
 jmri.jmrix.libusb.UsbViewAction =                   Open USB Device Viewer
