--- a/apps/AppsBundle.properties
+++ b/apps/AppsBundle.properties
@@ -1,6 +1,6 @@
 # AppsBundle.properties
 #
-# Revision $Revision: 1.12 $
+# Revision $Revision: 1.13 $
 #
 # Default properties for the apps package of jmri.
 
@@ -38,6 +38,8 @@ MsgServiceButtonDisabled = This button is disabled because your command station 
                             service mode programming, or we don't yet have code to do \
                             it for that type of system
 
+MessageLongCloseWarning = Closing this window will quit the program. Close?
+MessageShortCloseWarning = Quit?
 # DecoderPro buttons
 DpButtonUseProgrammingTrack = Service Mode (Programming Track) Programmer
 DpButtonProgramOnMainTrack  = Operations Mode (Main Track) Programmer
