Refactor LocoBufferTest to handle locobuffer, PR2 and new devices. I8N. JavaDocs

--- a/jmri/jmrix/loconet/LocoNetBundle.properties
+++ b/jmri/jmrix/loconet/LocoNetBundle.properties
@@ -1,6 +1,6 @@
 # LocoNetBundle.properties
 #
-# Revision $Revision: 1.14 $
+# Revision $Revision: 1.15 $
 #
 # Default properties for the jmri.jmrix.loconet menu
 
@@ -18,7 +18,7 @@ MenuItemThrottleMessages    = Send Throttle Messages
 MenuItemClockMon            = Monitor Clock
 MenuItemStartLocoNetServer  = Start LocoNet Server
 MenuItemLocoNetOverTCPServer = Start LocoNetOverTCP Server
-MenuItemLocoBufferStats     = Monitor LocoNet Stats
+MenuItemLocoStats           = Monitor LocoNet Stats
 MenuItemCmdStnConfig        = Configure Command Station
 MenuItemDownload            = Download Firmware
 MenuItemSoundload           = Download Sounds
