original contribution by Tim Hatch

--- a/jmri/jmrix/JmrixSystemsBundle.properties
+++ b/jmri/jmrix/JmrixSystemsBundle.properties
@@ -1,6 +1,6 @@
 # JmritSystemsBundle.properties
 #
-# Revision $Revision: 1.19 $
+# Revision $Revision: 1.20 $
 #
 # Default properties for the jmri.jmrix Systems menu
 
@@ -11,7 +11,11 @@ MenuTools    = Systems
 
 MenuSystems = Systems
 
+
+MenuItemTCHTech = TCHTechnology
+
 MenuItemAcela = Acela
+
 MenuItemCMRI = CMRI
 MenuItemEasyDCC = EasyDCC
 MenuItemLocoNet = LocoNet
